@@ -85,9 +85,11 @@
 \alias{\%*\%,pMatrix,pMatrix-method}
 \alias{\%*\%,Matrix,pMatrix-method}
 \alias{\%*\%,pMatrix,Matrix-method}
-\alias{\%*\%,Matrix,sparseVector-method}
-\alias{\%*\%,sparseVector,Matrix-method}
+\alias{\%*\%,mMatrix,sparseVector-method}
+\alias{\%*\%,sparseVector,mMatrix-method}
 \alias{\%*\%,sparseVector,sparseVector-method}
+\alias{\%*\%,numLike,sparseVector-method}
+\alias{\%*\%,sparseVector,numLike-method}
 \alias{\%*\%,TsparseMatrix,ANY-method}
 \alias{\%*\%,ANY,TsparseMatrix-method}
 \alias{\%*\%,TsparseMatrix,Matrix-method}
@@ -162,10 +164,12 @@
 \alias{crossprod,pMatrix,Matrix-method}
 \alias{crossprod,pMatrix,pMatrix-method}
 \alias{crossprod,pMatrix,missing-method}
-\alias{crossprod,Matrix,sparseVector-method}
-\alias{crossprod,sparseVector,Matrix-method}
+\alias{crossprod,mMatrix,sparseVector-method}
+\alias{crossprod,sparseVector,mMatrix-method}
 \alias{crossprod,sparseVector,missing-method}
 \alias{crossprod,sparseVector,sparseVector-method}
+\alias{crossprod,numLike,sparseVector-method}
+\alias{crossprod,sparseVector,numLike-method}
 \alias{crossprod,TsparseMatrix,ANY-method}
 \alias{crossprod,ANY,TsparseMatrix-method}
 \alias{crossprod,TsparseMatrix,Matrix-method}
@@ -227,12 +231,14 @@
 \alias{tcrossprod,Matrix,pMatrix-method}
 \alias{tcrossprod,pMatrix,pMatrix-method}
 \alias{tcrossprod,pMatrix,missing-method}
-\alias{tcrossprod,Matrix,sparseVector-method}
+\alias{tcrossprod,mMatrix,sparseVector-method}
 \alias{tcrossprod,sparseMatrix,sparseVector-method}
-\alias{tcrossprod,sparseVector,Matrix-method}
+\alias{tcrossprod,sparseVector,mMatrix-method}
 \alias{tcrossprod,sparseVector,missing-method}
 \alias{tcrossprod,sparseVector,sparseMatrix-method}
 \alias{tcrossprod,sparseVector,sparseVector-method}
+\alias{tcrossprod,numLike,sparseVector-method}
+\alias{tcrossprod,sparseVector,numLike-method}
 \alias{tcrossprod,TsparseMatrix,ANY-method}
 \alias{tcrossprod,ANY,TsparseMatrix-method}
 \alias{tcrossprod,TsparseMatrix,Matrix-method}
